Scrollbar width fix for firefox failed

--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -16,6 +16,11 @@ $menuHeight: 1.5em;
     width: 0em;  
 }
 
+scrollbar[orient = 'vertical'], scrollbar[orient = 'vertical'] thumb, scrollbar[orient = 'vertical'] scrollbarbutton{
+    max-width: 0em !important;
+    -moz-appearance: none !important;
+}
+
 body{
     background-color: $bodyColour;
     div#menubar{
